--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "@supabase/supabase-js": "^2.47.10",
     "next": "15.5.3",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
