--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.47.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "encoding": "^0.1.13",
+    "face-api.js": "^0.22.2",
     "lucide-react": "^0.544.0",
-    "@supabase/supabase-js": "^2.47.10",
     "next": "15.5.3",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
